SLE/Exercise_3/cd-aut-lang/target/generated-sources/monticore/sourcecode/automata/_parser/AutomataAntlrParser.java
// Generated from /Users/hhk/Documents/GitHub/SLE/Exercise_3/cd-aut-lang/target/generated-sources/monticore/sourcecode/automata/_parser/AutomataAntlr.g4 by ANTLR 4.7.1

package automata._parser;
import de.monticore.antlr4.MCParser;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class AutomataAntlrParser extends MCParser {
	static { RuntimeMetaData.checkVersion("4.7.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, LTLT=15, GTGT=16, STAR=17, 
		SEMI=18, LCURLY=19, RCURLY=20, MINUS=21, POINT=22, GT=23, Name=24, WS=25, 
		SL_COMMENT=26, ML_COMMENT=27;
	public static final int
		RULE_mCQualifiedName_eof = 0, RULE_mCQualifiedName = 1, RULE_mCImportStatement_eof = 2, 
		RULE_mCImportStatement = 3, RULE_mCPrimitiveType_eof = 4, RULE_mCPrimitiveType = 5, 
		RULE_mCQualifiedType_eof = 6, RULE_mCQualifiedType = 7, RULE_mCReturnType_eof = 8, 
		RULE_mCReturnType = 9, RULE_mCVoidType_eof = 10, RULE_mCVoidType = 11, 
		RULE_automaton_eof = 12, RULE_automaton = 13, RULE_state_eof = 14, RULE_state = 15, 
		RULE_transition_eof = 16, RULE_transition = 17, RULE_type_eof = 18, RULE_type = 19, 
		RULE_typeVar_eof = 20, RULE_typeVar = 21, RULE_field_eof = 22, RULE_field = 23, 
		RULE_method_eof = 24, RULE_method = 25, RULE_mCType_eof = 26, RULE_mCType = 27, 
		RULE_mCObjectType_eof = 28, RULE_mCObjectType = 29;
	public static final String[] ruleNames = {
		"mCQualifiedName_eof", "mCQualifiedName", "mCImportStatement_eof", "mCImportStatement", 
		"mCPrimitiveType_eof", "mCPrimitiveType", "mCQualifiedType_eof", "mCQualifiedType", 
		"mCReturnType_eof", "mCReturnType", "mCVoidType_eof", "mCVoidType", "automaton_eof", 
		"automaton", "state_eof", "state", "transition_eof", "transition", "type_eof", 
		"type", "typeVar_eof", "typeVar", "field_eof", "field", "method_eof", 
		"method", "mCType_eof", "mCType", "mCObjectType_eof", "mCObjectType"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'import'", "'boolean'", "'byte'", "'short'", "'int'", "'long'", 
		"'char'", "'float'", "'double'", "'void'", "'automata'", "'state'", "'initial'", 
		"'final'", "'<<'", "'>>'", "'*'", "';'", "'{'", "'}'", "'-'", "'.'", "'>'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, "LTLT", "GTGT", "STAR", "SEMI", "LCURLY", "RCURLY", 
		"MINUS", "POINT", "GT", "Name", "WS", "SL_COMMENT", "ML_COMMENT"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "AutomataAntlr.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }



	  // convert function for Name
	private String convertName(Token t)  {
	    return t.getText();
	}

	  // convert function for NEWLINE
	private String convertNEWLINE(Token t)  {
	    return t.getText();
	}

	  // convert function for WS
	private String convertWS(Token t)  {
	    return t.getText();
	}

	  // convert function for SL_COMMENT
	private String convertSL_COMMENT(Token t)  {
	    return t.getText();
	}

	  // convert function for ML_COMMENT
	private String convertML_COMMENT(Token t)  {
	    return t.getText();
	}


	public AutomataAntlrParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class MCQualifiedName_eofContext extends ParserRuleContext {
		public de.monticore.types.mcbasictypes._ast.ASTMCQualifiedName ret = null;
		public MCQualifiedNameContext tmp;
		public TerminalNode EOF() { return getToken(AutomataAntlrParser.EOF, 0); }
		public MCQualifiedNameContext mCQualifiedName() {
			return getRuleContext(MCQualifiedNameContext.class,0);
		}
		public MCQualifiedName_eofContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mCQualifiedName_eof; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AutomataAntlrListener ) ((AutomataAntlrListener)listener).enterMCQualifiedName_eof(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AutomataAntlrListener ) ((AutomataAntlrListener)listener).exitMCQualifiedName_eof(this);
		}
	}

	public final MCQualifiedName_eofContext mCQualifiedName_eof() throws RecognitionException {
		MCQualifiedName_eofContext _localctx = new MCQualifiedName_eofContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_mCQualifiedName_eof);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(60);
			((MCQualifiedName_eofContext)_localctx).tmp = mCQualifiedName();
			((MCQualifiedName_eofContext)_localctx).ret =  ((MCQualifiedName_eofContext)_localctx).tmp.ret;
			setState(62);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MCQualifiedNameContext extends ParserRuleContext {
		public de.monticore.types.mcbasictypes._ast.ASTMCQualifiedName ret = null;
		public Token tmp0;
		public Token tmp1;
		public List<TerminalNode> Name() { return getTokens(AutomataAntlrParser.Name); }
		public TerminalNode Name(int i) {
			return getToken(AutomataAntlrParser.Name, i);
		}
		public List<TerminalNode> POINT() { return getTokens(AutomataAntlrParser.POINT); }
		public TerminalNode POINT(int i) {
			return getToken(AutomataAntlrParser.POINT, i);
		}
		public MCQualifiedNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mCQualifiedName; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AutomataAntlrListener ) ((AutomataAntlrListener)listener).enterMCQualifiedName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AutomataAntlrListener ) ((AutomataAntlrListener)listener).exitMCQualifiedName(this);
		}
	}

	public final MCQualifiedNameContext mCQualifiedName() throws RecognitionException {
		MCQualifiedNameContext _localctx = new MCQualifiedNameContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_mCQualifiedName);
		// ret is normally returned, a is used to be compatible with rule using the return construct
		de.monticore.types.mcbasictypes._ast.ASTMCQualifiedName _aNode = null;
		_aNode=de.monticore.types.mcbasictypes._ast.MCBasicTypesNodeFactory.createASTMCQualifiedName();
		((MCQualifiedNameContext)_localctx).ret = _aNode;
		_aNode.set_SourcePositionStart( computeStartPosition(_input.LT(1)));
		setActiveASTNode(_aNode);

		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			{
			setState(64);
			((MCQualifiedNameContext)_localctx).tmp0 = match(Name);
			 addToIteratedAttributeIfNotNull(_aNode.getPartList(), convertName(((MCQualifiedNameContext)_localctx).tmp0));
			}
			setState(72);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(67);
					match(POINT);
					{
					setState(68);
					((MCQualifiedNameContext)_localctx).tmp1 = match(Name);
					 addToIteratedAttributeIfNotNull(_aNode.getPartList(), convertName(((MCQualifiedNameContext)_localctx).tmp1));
					}
					}
					} 
				}
				setState(74);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			}
			}
			}
			_ctx.stop = _input.LT(-1);
			_aNode.set_SourcePositionEnd(computeEndPosition(_input.LT(-1)));
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MCImportStatement_eofContext extends ParserRuleContext {
		public de.monticore.types.mcbasictypes._ast.ASTMCImportStatement ret = null;
		public MCImportStatementContext tmp;
		public TerminalNode EOF() { return getToken(AutomataAntlrParser.EOF, 0); }
		public MCImportStatementContext mCImportStatement() {
			return getRuleContext(MCImportStatementContext.class,0);
		}
		public MCImportStatement_eofContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mCImportStatement_eof; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AutomataAntlrListener ) ((AutomataAntlrListener)listener).enterMCImportStatement_eof(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AutomataAntlrListener ) ((AutomataAntlrListener)listener).exitMCImportStatement_eof(this);
		}
	}

	public final MCImportStatement_eofContext mCImportStatement_eof() throws RecognitionException {
		MCImportStatement_eofContext _localctx = new MCImportStatement_eofContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_mCImportStatement_eof);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(75);
			((MCImportStatement_eofContext)_localctx).tmp = mCImportStatement();
			((MCImportStatement_eofContext)_localctx).ret =  ((MCImportStatement_eofContext)_localctx).tmp.ret;
			setState(77);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MCImportStatementContext extends ParserRuleContext {
		public de.monticore.types.mcbasictypes._ast.ASTMCImportStatement ret = null;
		public MCQualifiedNameContext tmp0;
		public TerminalNode SEMI() { return getToken(AutomataAntlrParser.SEMI, 0); }
		public MCQualifiedNameContext mCQualifiedName() {
			return getRuleContext(MCQualifiedNameContext.class,0);
		}
		public TerminalNode POINT() { return getToken(AutomataAntlrParser.POINT, 0); }
		public TerminalNode STAR() { return getToken(AutomataAntlrParser.STAR, 0); }
		public MCImportStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mCImportStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AutomataAntlrListener ) ((AutomataAntlrListener)listener).enterMCImportStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AutomataAntlrListener ) ((AutomataAntlrListener)listener).exitMCImportStatement(this);
		}
	}

	public final MCImportStatementContext mCImportStatement() throws RecognitionException {
		MCImportStatementContext _localctx = new MCImportStatementContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_mCImportStatement);
		// ret is normally returned, a is used to be compatible with rule using the return construct
		de.monticore.types.mcbasictypes._ast.ASTMCImportStatement _aNode = null;
		_aNode=de.monticore.types.mcbasictypes._ast.MCBasicTypesNodeFactory.createASTMCImportStatement();
		((MCImportStatementContext)_localctx).ret = _aNode;
		_aNode.set_SourcePositionStart( computeStartPosition(_input.LT(1)));
		setActiveASTNode(_aNode);

		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(79);
			match(T__0);
			setState(80);
			((MCImportStatementContext)_localctx).tmp0 = mCQualifiedName();
			_aNode.setMCQualifiedName(_localctx.tmp0.ret);
			setState(85);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==POINT) {
				{
				setState(82);
				match(POINT);
				{
				setState(83);
				match(STAR);

				_aNode.setStar(true);

				}
				}
			}

			setState(87);
			match(SEMI);
			}
			_ctx.stop = _input.LT(-1);
			_aNode.set_SourcePositionEnd(computeEndPosition(_input.LT(-1)));
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MCPrimitiveType_eofContext extends ParserRuleContext {
		public de.monticore.types.mcbasictypes._ast.ASTMCPrimitiveType ret = null;
		public MCPrimitiveTypeContext tmp;
		public TerminalNode EOF() { return getToken(AutomataAntlrParser.EOF, 0); }
		public MCPrimitiveTypeContext mCPrimitiveType() {
			return getRuleContext(MCPrimitiveTypeContext.class,0);
		}
		public MCPrimitiveType_eofContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mCPrimitiveType_eof; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AutomataAntlrListener ) ((AutomataAntlrListener)listener).enterMCPrimitiveType_eof(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AutomataAntlrListener ) ((AutomataAntlrListener)listener).exitMCPrimitiveType_eof(this);
		}
	}

	public final MCPrimitiveType_eofContext mCPrimitiveType_eof() throws RecognitionException {
		MCPrimitiveType_eofContext _localctx = new MCPrimitiveType_eofContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_mCPrimitiveType_eof);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(89);
			((MCPrimitiveType_eofContext)_localctx).tmp = mCPrimitiveType();
			((MCPrimitiveType_eofContext)_localctx).ret =  ((MCPrimitiveType_eofContext)_localctx).tmp.ret;
			setState(91);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
